--- a/app/src/main/res/layout/chat_adapter_owner_item_layout.xml
+++ b/app/src/main/res/layout/chat_adapter_owner_item_layout.xml
@@ -5,14 +5,6 @@
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/chat_message_item_margin"
     android:background="@drawable/bubble_green">
-
-    <TextView
-        android:id="@+id/tvChatOwnerPostMessage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/chat_message_item_text_padding"
-        android:text=""/>
-
     <ImageView
         android:contentDescription="@null"
         android:id="@+id/ivChatOwnerPostImage"
@@ -20,5 +12,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"/>
-
+    <TextView
+        android:id="@+id/tvChatOwnerPostMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:linksClickable="true"
+        android:autoLink="web|email"
+        android:padding="@dimen/chat_message_item_text_padding"
+        android:text=""/>
 </FrameLayout>
