--- a/app/src/main/res/layout/chat_adapter_user_item_layout.xml
+++ b/app/src/main/res/layout/chat_adapter_user_item_layout.xml
@@ -6,13 +6,6 @@
     android:layout_margin="@dimen/chat_message_item_margin"
     android:background="@drawable/bubble_yellow">
 
-    <TextView
-        android:id="@+id/tvChatUserPostMessage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/chat_message_item_text_padding"
-        android:text=""/>
-
     <ImageView
         android:contentDescription="@null"
         android:id="@+id/ivChatUserPostImage"
@@ -20,5 +13,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"/>
+    <TextView
+        android:id="@+id/tvChatUserPostMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:linksClickable="true"
+        android:autoLink="web|email"
+        android:padding="@dimen/chat_message_item_text_padding"
+        android:text=""/>
 
 </FrameLayout>
