add images, chat bubbles, ads

--- a/app/src/main/res/layout/chat_adapter_owner_item_layout.xml
+++ b/app/src/main/res/layout/chat_adapter_owner_item_layout.xml
@@ -1,23 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/chat_message_item_margin"
-    android:background="@drawable/bubble_green">
-    <ImageView
-        android:contentDescription="@null"
-        android:id="@+id/ivChatOwnerPostImage"
-        android:layout_gravity="center"
+    android:gravity="right">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"/>
-    <TextView
-        android:id="@+id/tvChatOwnerPostMessage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:linksClickable="true"
-        android:autoLink="web|email"
-        android:padding="@dimen/chat_message_item_text_padding"
-        android:text=""/>
-</FrameLayout>
+        android:layout_height="wrap_content">
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/chat_message_item_margin"
+            android:background="@drawable/bubble_green">
+
+            <ImageView
+                android:id="@+id/ivChatOwnerPostImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:contentDescription="@null"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/tvChatOwnerPostMessage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autoLink="web|email"
+                android:linksClickable="true"
+                android:padding="@dimen/chat_message_item_text_padding"
+                android:text="22" />
+        </FrameLayout>
+    </LinearLayout>
+</LinearLayout>
