--- a/app/src/main/res/layout/chat_adapter_system_item_layout.xml
+++ b/app/src/main/res/layout/chat_adapter_system_item_layout.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/chat_message_item_margin"
-    android:background="@android:color/darker_gray">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tvChatSystemPostMessage"
-        android:layout_width="match_parent"
+    <FrameLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
-        android:padding="@dimen/chat_message_item_text_padding"
-        android:text=""/>
+        android:layout_margin="@dimen/chat_message_item_margin"
+        android:background="@android:color/darker_gray">
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/tvChatSystemPostMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/chat_message_item_text_padding"
+            android:text=""
+            android:textColor="@android:color/white" />
+
+    </FrameLayout>
+</LinearLayout>
