--- a/app/src/main/res/layout/fragment_main_layout.xml
+++ b/app/src/main/res/layout/fragment_main_layout.xml
@@ -4,33 +4,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <AutoCompleteTextView
-        android:id="@+id/actvMainAutoCompleteInput"
+    <LinearLayout
+        android:id="@+id/ll_inputContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/editor_line_margin_top_bottom"
-        android:layout_marginBottom="@dimen/editor_line_margin_top_bottom"
-        android:singleLine="true"
-        android:textSize="@dimen/text_size"
-        android:maxLines="1"
-        android:layout_centerHorizontal="true"
-        android:ellipsize="end"
-        android:imeOptions="actionGo"
-        android:drawableLeft="@android:drawable/ic_menu_search"
-        android:hint="@string/keyword_hint"/>
-    <TextView
-        android:id="@+id/tvGo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="@string/go"
-        android:layout_below="@id/actvMainAutoCompleteInput"
-        android:layout_centerHorizontal="true"
-        android:textSize="@dimen/title_text_size"
-        android:textColor="@color/text_blue_selector"/>
+        android:orientation="horizontal"
+        android:gravity="center">
+        <AutoCompleteTextView
+            android:id="@+id/actvMainAutoCompleteInput"
+            android:layout_weight="2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/editor_line_margin_top_bottom"
+            android:layout_marginBottom="@dimen/editor_line_margin_top_bottom"
+            android:singleLine="true"
+            android:textSize="@dimen/text_size"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:imeOptions="actionGo"
+            android:drawableLeft="@android:drawable/ic_menu_search"
+            android:hint="@string/keyword_hint"/>
+        <TextView
+            android:id="@+id/tvGo"
+            android:layout_weight="8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="@string/go"
+            android:gravity="center"
+            android:background="@drawable/badge"
+            android:textSize="@dimen/title_text_size"
+            android:enabled="false"
+            android:textColor="@color/text_blue_selector"/>
+    </LinearLayout>
     <android.support.v7.widget.RecyclerView
 
         android:layout_width="wrap_content"
@@ -39,6 +47,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_below="@id/tvGo" />
+        android:layout_below="@id/ll_inputContainer" />
 
 </RelativeLayout>
