--- a/app/src/main/res/layout/chat_adapter_owner_item_layout.xml
+++ b/app/src/main/res/layout/chat_adapter_owner_item_layout.xml
@@ -8,28 +8,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <FrameLayout
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/chat_message_item_margin"
-            android:background="@drawable/bubble_green">
+            android:background="@drawable/bubble_green"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/ivChatOwnerPostImage"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:adjustViewBounds="true"
                 android:contentDescription="@null"
-                android:visibility="gone" />
+                android:visibility="visible"
+                android:src="@drawable/adv2" />
 
             <TextView
                 android:id="@+id/tvChatOwnerPostMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autoLink="web|email"
+                android:textColorLink="@color/black"
                 android:linksClickable="true"
                 android:padding="@dimen/chat_message_item_text_padding"
                 android:text="22" />
-        </FrameLayout>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
