--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -151,5 +151,5 @@
     <color name="darkBlue">#00008B</color>
     <color name="navy">#000080</color>
     <color name="black">#000000</color>
-    <color name="badge_color">#00FF00</color>
+    <color name="badge_color">#008800</color>
 </resources>
