--- a/app/src/main/res/layout/fragment_chat_layout.xml
+++ b/app/src/main/res/layout/fragment_chat_layout.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:layout_width="0px"
+        android:layout_height="0px"/>
 
     <include
         android:id="@+id/iChatWidgetLayout"
